feat: Mejora de los DTOs de Medicamentos e implementación de las validaciones y excepciones