@@ -1,6 +1,11 @@
 package com.petwellness.service.impl;
 
 import com.petwellness.dto.MedicamentosDTO;
+import com.petwellness.dto.MedicamentosRegistroDTO;
+import com.petwellness.exception.BadRequestException;
+import com.petwellness.exception.ResourceNotFoundException;
+import com.petwellness.mapper.MedicamentosMapper;
+import com.petwellness.mapper.MedicamentosRegistroMapper;
 import com.petwellness.model.entity.Medicamentos;
 import com.petwellness.model.entity.RegistroMascota;
 import com.petwellness.repository.MedicamentosRepository;
@@ -10,8 +15,8 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -19,74 +24,78 @@ public class MedicamentosServiceImpl implements MedicamentosService {
 
     private final MedicamentosRepository medicamentosRepository;
     private final MascotaDatosRepository mascotaDatosRepository;
+    private final MedicamentosRegistroMapper medicamentosRegistroMapper;
 
+    @Transactional(readOnly = true)
     @Override
     public List<MedicamentosDTO> getAllMedicamentos() {
-        return medicamentosRepository.findAll().stream()
-                .map(this::convertToDTO)
-                .collect(Collectors.toList());
+        List<Medicamentos> medicamentos = medicamentosRepository.findAll();
+        return medicamentos.stream().map(medicamento -> {
+            MedicamentosDTO medicamentoDTO = new MedicamentosDTO();
+            medicamentoDTO.setIdMedicamento(medicamento.getIdMedicamento());
+            medicamentoDTO.setDescripcion(medicamento.getDescripcion());
+            medicamentoDTO.setNomMascota(medicamento.getRegistroMascota().getNombre());
+            return medicamentoDTO;
+        }).toList();
     }
 
+    @Transactional(readOnly = true)
     @Override
     public MedicamentosDTO getMedicamentoById(Integer id) {
         Medicamentos medicamento = medicamentosRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Medicamento no encontrado"));
-        return convertToDTO(medicamento);
+                .orElseThrow(() -> new ResourceNotFoundException("El medicamento con ID "+id+" no existe"));
+        MedicamentosDTO medicamentoDTO = new MedicamentosDTO();
+        medicamentoDTO.setIdMedicamento(medicamento.getIdMedicamento());
+        medicamentoDTO.setDescripcion(medicamento.getDescripcion());
+        medicamentoDTO.setNomMascota(medicamento.getRegistroMascota().getNombre());
+        return medicamentoDTO;
     }
 
     @Transactional
     @Override
-    public MedicamentosDTO createMedicamento(MedicamentosDTO medicamentoDTO) {
-        Medicamentos medicamento = convertToEntity(medicamentoDTO);
-        Medicamentos nuevoMedicamento = medicamentosRepository.save(medicamento);
-        return convertToDTO(nuevoMedicamento);
+    public MedicamentosRegistroDTO createMedicamento(MedicamentosRegistroDTO medicamentosRegistroDTO) {
+        medicamentosRepository.findByDescripcion(medicamentosRegistroDTO.getDescripcion())
+                .ifPresent(existingMedicamento ->{
+                    throw new BadRequestException("Ya existe un medicamento con la misma descripción");
+                });
+        Integer idMascota = medicamentosRegistroDTO.getIdRegistroMascota();
+        RegistroMascota registroMascota = mascotaDatosRepository.findById(idMascota)
+                .orElseThrow(() -> new ResourceNotFoundException("La mascota con ID "+idMascota+" no existe"));
+        Medicamentos medicamentos = medicamentosRegistroMapper.toEntity(medicamentosRegistroDTO);
+        medicamentos.setFecha(LocalDate.now());
+        medicamentos.setRegistroMascota(registroMascota);
+        medicamentos = medicamentosRepository.save(medicamentos);
+        return medicamentosRegistroMapper.toDTO(medicamentos);
     }
 
     @Transactional
     @Override
-    public MedicamentosDTO updateMedicamento(Integer id, MedicamentosDTO medicamentoDTO) {
-        Medicamentos medicamentoExistente = medicamentosRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Medicamento no encontrado"));
+    public MedicamentosRegistroDTO updateMedicamento(Integer id, MedicamentosRegistroDTO medicamentosRegistroDTO) {
+        Medicamentos medicamentoFromDB = medicamentosRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("El medicamento con ID "+id+" no existe"));
+        medicamentosRepository.findByDescripcion(medicamentosRegistroDTO.getDescripcion())
+                .filter(existingMedicamento -> !existingMedicamento.getIdMedicamento().equals(id))
+                .ifPresent(existingMedicamento -> {
+                    throw new BadRequestException("Ya existe un medicamento con la misma descripción");
+                });
 
-        medicamentoExistente.setDescripcion(medicamentoDTO.getDescripcion());
-        medicamentoExistente.setFecha(medicamentoDTO.getFecha());
+        Integer idMascota = medicamentosRegistroDTO.getIdRegistroMascota();
+        RegistroMascota registroMascota = mascotaDatosRepository.findById(idMascota)
+                .orElseThrow(() -> new ResourceNotFoundException("La mascota con ID "+idMascota+" no existe"));
 
-        RegistroMascota registroMascota = mascotaDatosRepository.findById(medicamentoDTO.getIdMascota())
-                .orElseThrow(() -> new RuntimeException("Mascota no encontrada"));
-
-        medicamentoExistente.setRegistroMascota(registroMascota);
-
-        Medicamentos medicamentoActualizado = medicamentosRepository.save(medicamentoExistente);
-        return convertToDTO(medicamentoActualizado);
+        medicamentoFromDB.setDescripcion(medicamentosRegistroDTO.getDescripcion());
+        medicamentoFromDB.setFecha(LocalDate.now());
+        medicamentoFromDB.setRegistroMascota(registroMascota);
+        medicamentoFromDB = medicamentosRepository.save(medicamentoFromDB);
+        return medicamentosRegistroMapper.toDTO(medicamentoFromDB);
     }
 
     @Transactional
     @Override
     public void deleteMedicamento(Integer id) {
         Medicamentos medicamento = medicamentosRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Medicamento no encontrado"));
+                .orElseThrow(() -> new ResourceNotFoundException("El medicamento con ID "+id+" no existe"));
         medicamentosRepository.delete(medicamento);
-    }
-
-    private MedicamentosDTO convertToDTO(Medicamentos medicamento) {
-        MedicamentosDTO dto = new MedicamentosDTO();
-        dto.setIdMedicamento(medicamento.getIdMedicamento());
-        dto.setDescripcion(medicamento.getDescripcion());
-        dto.setFecha(medicamento.getFecha());
-        dto.setIdMascota(medicamento.getRegistroMascota().getIdMascota());
-        return dto;
-    }
-
-    private Medicamentos convertToEntity(MedicamentosDTO dto) {
-        Medicamentos medicamento = new Medicamentos();
-        medicamento.setDescripcion(dto.getDescripcion());
-        medicamento.setFecha(dto.getFecha());
-
-        RegistroMascota registroMascota = mascotaDatosRepository.findById(dto.getIdMascota())
-                .orElseThrow(() -> new RuntimeException("Mascota no encontrada"));
-
-        medicamento.setRegistroMascota(registroMascota);
-        return medicamento;
     }
 }
 
